# navilink

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  NaviGPSapi.c  README  README.md  api.c  endianness.c  ipc_linux.c  main.c  packetapi.c  posixserial.c  win32serial.c
cli/: CMakeLists.txt  README.md  main.c
cmake/: FindLibSerialport.cmake
doc/: Doxyfile
include/: NaviGPSapi.h  api.h  endianness.h  ipc_linux.h  packetapi.h  stdpackets.h
lib/: CMakeLists.txt
lib/include/: navilink.h  navilink_device.h  navilink_endianness.h  navilink_errors.h  navilink_gpx.h  navilink_internal.h  navilink_packet.h  navilink_protocol.h
lib/src/: navilink_device.c  navilink_errors.c  navilink_gpx.c  navilink_packet.c  navilink_protocol.c
lib/tests/: CMakeLists.txt  raw_dump.txt  test_last.gpx  test_navilink.c  test_new.gpx
ressources/: navilink.pl  navilink_protocol.mm
